[gd_scene load_steps=4 format=2]

[ext_resource path="res://ThreeButtonPuzzle/StaticButton.png" type="Texture" id=1]
[ext_resource path="res://ThreeButtonPuzzle/Level2_door_button.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="DoorButton1" type="Area2D"]
collision_mask = 66
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="button_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_DoorButton1_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_DoorButton1_area_exited"]
